
	* HTML5 Widget 用のプロジェクトを作る。

2010-07-05: simple-usage-sqlite.sh [deleted]

	* SQLite を使ってみる。

2010-07-03: ant-xml2html.xml [deleted]

	* Ant の xslt タスクで XML を HTML に変換する。

2010-07-01: simple-usage-twisted-web.py
	* HTTPServer の代わりに twisted.web を使う。

2010-06-29: simple-usage-jsonp.html [deleted]

	* HTTPServer を使って JSONP でデータを送る。

2010-06-28: simple-usage-sqlite.php [deleted]

	* SQLite を使ってみる。

2010-06-27: simple-usage-worker.js,simple-usage-worker.html
	* Worker を触ってみる。

2010-06-25: simple-usage-zope-interface.py [deleted]

	* `zope.interface` モジュールを使う。

2010-06-25: loop-test.py [deleted]

	* ループ処理を計測する。

2010-06-19: try-inspect.py

	* `inspect` モジュールを使う。

2010-06-18: newprj-autotools.sh [deleted]

	* autotools でプロジェクトを作成する。

2010-06-17: loop-test.js,loop-test.html,loop-test.css
	* Duff's Device の考えでループ処理を実行する。

2010-06-13: try-doctest.py

	* `doctest` モジュールを使う。

2010-06-12: blogger-feed.js,blogger-feed.html

	* Blogger のフィードを JSONP を使って表示する。
	* Meld `blogger-feed.css` into base html file
	* Use React 16 without JSX on April 4th, 2020

2010-06-10: xml2html.xsl,xml2html.xml,xml2html.css [deleted]

	* XSLT で XML を HTML に整形する。

2010-06-09: slideshow.html [deleted]

	* JSON の画像情報でスライドショーをする。 (requires jQuery)

2010-06-08: slideshow-metainfo-generator.py
	* 画像の情報を JSON 形式で出力する。

2010-06-07: eval-input-text.html

	* textarea に入力したスクリプトを eval する。

2010-06-06: try-canvas.html

	* HTML5 の Canvas 要素を使ってみる。
	* Renamed the file on April 4th, 2020

2010-05-31: simple-usage-function-ptr.cpp
	* 関数ポインタを使ってみる。

2010-05-30: color-console.cpp
	* コンソールに色づけする。

2010-05-25: icalendar2hcalendar.py [deleted]

	* iCalendar を hCalendar に変換してみる。

2010-05-24: simple-usage-reportlab-table.py
	* ReportLab で表を生成する。

2010-05-22: csv2html.py [deleted]

	* CSV から HTML の <ul> と <table> を作る。

2010-05-21: try-sqlite.py

	* SQLite を使ってみる。

2010-05-18: simple-usage-reportlab-template.py,simple-usage-reportlab-template.txt
	* 差し込み印刷のように PDF を生成する。
