@@ -7,5 +7,6 @@
   <li><a href="eval-input-text.html">Eval JavaScript code snippet</a></li>
   <li><a href="blogger-feed.html">Blogger feed reader</a></li>
   <li><a href="try-canvas.html">Try &lt;canvas&gt; element</a></li>
+  <li><a href="try-webworkers.html">Try Web Workers</a></li>
 </ul>
 {% endblock %}
