@@ -1,35 +1,0 @@
-<!DOCTYPE HTML>
-<html lang="ja"><head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta http-equiv="content-script-type" content="text/javascript" />
-	<meta http-equiv="content-style-type" content="text/css" />
-	<title>Worker test</title>
-</head><body>
-<div id="wrapper">
-<form method="GET">
-<input type="text" name="input" size="60" />
-<select name="count">
-<option value="2">2</option>
-<option value="3">3</option>
-<option value="4">4</option>
-<option value="5">5</option>
-</select>
-<input type="submit" value="Get" />
-</form>
-<div id="contents" />
-</div>
-<script type="text/javascript">
-var worker = new Worker("d53.js");
-worker.onmessage = function(event) {
-	document.getElementById("contents").innerHTML = event.data;
-};
-document.forms[0].onsubmit = function() {
-	var elements = this.elements,
-			text = elements["input"].value,
-			count = elements["count"].value;
-	worker.postMessage({"count":count, "text":text});
-	return false;
-};
-</script>
-<!-- vim: set noet sw=2 ts=2 fileencoding=utf-8 : -->
-</body></html>
