@@ -1,0 +1,64 @@
+{% extends "layout.html.j2" %}
+{% block title %}Web Workers example{% endblock %}
+{% block style %}
+#feedreader div.row { margin: 10px; }
+#feedreader p { padding: 10px 10px 10px 30px; border-left: solid 5px #9999FF; }
+#feedreader p span { margin: 3px 5px; }
+#feedreader p a { margin: 3px 5px; }
+{% endblock %}
+{% block content %}
+<form class="form">
+  <div class="form-group row">
+    <label for="inputText" class="col-sm-2 col-form-label">Text</label>
+    <div class="col-sm-10">
+      <input class="form-control" name="text" placeholder="Enter some texts to be repeated" size="60" id="inputText">
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="inputRepeat" class="col-sm-2 col-form-label">Repeat count</label>
+    <div class="col-sm-10">
+      <select class="form-control" name="repeat" id="inputRepeat">
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+      </select>
+    </div>
+  </div>
+  <div class="form-group row">
+    <button type="submit" class="btn btn-primary">Run</button>
+  </div>
+</form>	
+<div id="results"></div>
+
+<hr>
+<div>
+  <p>References:</p>
+  <ul>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Workers_API/Using_web_workers">Using Web Workers - Web APIs | MDN</a></li>
+  </ul>
+</div>
+{% endblock %}
+{% block script %}
+const results = document.querySelector('#results');
+if (window.Worker) {
+  const worker = new Worker("{{ url_for('static', filename='try-webworkers-worker.js') }}");
+  worker.onmessage = function(event) {
+    results.textContent = event.data;
+  };
+  document.forms[0].onsubmit = function(e) {
+    e.preventDefault();
+    const elements = this.elements,
+          text = elements["text"],
+          repeatCount = parseInt(elements["repeat"].value);
+    if (text.value === '') {
+      text.classList.add("alert-danger");
+      setTimeout(function() { text.classList.remove("alert-danger"); }, 2000);
+    } else {
+      worker.postMessage({"text": text.value, "repeat": repeatCount});
+    }
+  };
+} else {
+  results.textContent = 'Web Worker is not avaiable on your browser.';
+}
+{% endblock %}
